[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-sdk = "2.0.19"
solana-program-test = "2.0.19"
spl-token-client = "0.12.1"
assert_matches = "1.5.0"
test-case = "3.3.1"
itertools = "0.14.0"
bincode = "1.3.3"


[patch.crates-io]
# anchor 0.30.1 but point to the version before solana 2.1
anchor-lang = { git = "https://github.com/coral-xyz/anchor.git", rev = "4cdb0ebe8f613f7dbbd5c4b00571139b2517898f" }
anchor-spl = { git = "https://github.com/coral-xyz/anchor.git", rev = "4cdb0ebe8f613f7dbbd5c4b00571139b2517898f" }
